# executorch-rs

./: .gitignore  Cargo.toml  README.md  bindings.hpp  build.rs
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci_requirements.txt  develop.yaml  security_scan.yaml
c/: .gitignore  bindings_wrapper.hpp
c/executorch_rs/: api_utils.cpp  api_utils.hpp
c_ext/: api_utils.cpp  api_utils.hpp
cpp/: bindings.hpp  executorch_rs_defines.h
cpp/executorch_rs_ext/: api_utils.cpp  api_utils.hpp
etc/: .gitignore  download_headers.py  requirements.txt  setup_dev_env.py
examples/: add.rs  run_all.py
examples/data_map/: Cargo.toml  build.rs  export_model.py
examples/data_map/model/: _default_external_constant.ptd  model.pte
examples/data_map/src/: main.rs
examples/etdump/: Cargo.toml  README.md  build.rs
examples/etdump/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/hello_world_add/: .gitignore  Cargo.toml  export_model.py
examples/hello_world_add/src/: main.rs
examples/hello_world_add_module/: Cargo.toml  build.rs
examples/hello_world_add_module/src/: main.rs
examples/hello_world_add_no_std/: .gitignore  Cargo.toml  build.rs
examples/hello_world_add_no_std/src/: main.rs
examples/llama3/: .gitignore  Cargo.toml  README.md  build.rs  download_vocal.py
examples/llama3/src/: main.rs
examples/nano-gpt/: .gitignore  Cargo.toml  README.md  build.rs  export_model.py
examples/nano-gpt/src/: main.rs
examples/no_ndarray/: Cargo.toml  model.pte
examples/no_ndarray/src/: main.rs
examples/no_std/: Cargo.toml  export_model.py
examples/no_std/src/: main.rs
examples/raw_tensor/: Cargo.toml  export_model.py
examples/raw_tensor/src/: main.rs
executorch/: Cargo.toml  README.md  build.rs
executorch-sys/: .gitignore  Cargo.toml  README.md  build.rs
executorch-sys/cpp/: .gitignore  bindings.h  bindings.hpp  executorch_rs_defines.h
executorch-sys/cpp/executorch/runtime/core/exec_aten/util/: dim_order_util.h  tensor_util.h
executorch-sys/cpp/executorch_rs/: bridge.cpp  bridge.hpp  c_bridge.cpp  c_bridge.h  cxx_bridge.cpp  cxx_bridge.hpp  defines.h  layout.hpp
executorch-sys/cpp/executorch_rs_ext/: api_utils.cpp  api_utils.hpp
executorch-sys/include/executorch_rs/: cxx_bridge.hpp
executorch-sys/src/: c_bridge.rs  cxx_bridge.rs  lib.rs
executorch-sys/src/cxx_bridge/: core.rs  mod.rs  module.rs  tensor_ptr.rs
executorch/src/: data_loader.rs  data_map.rs  error.rs  event_tracer.rs  lib.rs  log.rs  memory.rs  module.rs  platform.rs  private.rs  program.rs  scalar.rs  tests.rs  util.rs
executorch/src/evalue/: boxed_list.rs  mod.rs
executorch/src/tensor/: accessor.rs  array.rs  layout.rs  mod.rs  ptr.rs  raw.rs  safe.rs  scalar.rs
executorch/tests/: platform.rs
scripts/: download_headers.py  requirements.txt  setup_dev.py
src/: c_link.rs  data_loader.rs  error.rs  evalue.rs  event_tracer.rs  lib.rs  memory.rs  module.rs  platform.rs  program.rs  scalar.rs  tensor.rs  tests.rs  util.rs
src/evalue/: boxed_list.rs  mod.rs
src/tensor/: array.rs  fmt.rs  mod.rs  ptr.rs  scalar.rs
