[package]
name = "executorch"
version = "0.3.0"
authors = ["Barak Ugav <barakugav@gmail.com>"]
edition = "2021"
description = "Rust bindings for ExecuTorch - On-device AI across mobile, embedded and edge for PyTorch"
readme = "README.md"
repository = "https://github.com/barakugav/executorch-rs"
license = "Apache-2.0"
keywords = [
    "executorch",
    "pytorch",
    "machine-learning",
    "edge-device",
    "bindings",
]
categories = [
    "algorithms",
    "mathematics",
    "embedded",
    "no-std",
    "no-std::no-alloc",
]
include = ["Cargo.toml", "src/", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
executorch-sys = { path = "executorch-sys", version = "0.3.0", default-features = false }
ndarray = { version = "0.16", default-features = false }
half = { version = "2.4", optional = true }
num-complex = { version = "0.4", optional = true }
cfg-if = "1.0"

[features]
default = ["std"]
std = ["alloc", "executorch-sys/std", "ndarray/std"]
alloc = []
data-loader = ["executorch-sys/data-loader"]
module = ["executorch-sys/module", "std"]
f16 = ["half"]
complex = ["num-complex"]
