[package]
name = "executorch-sys"
version = "0.4.0"
authors = ["Barak Ugav <barakugav@gmail.com>"]
edition = "2021"
rust-version = "1.77.0" # println!("cargo::...)
description = "Unsafe Rust bindings for ExecuTorch - On-device AI across mobile, embedded and edge for PyTorch"
readme = "README.md"
repository = "https://github.com/barakugav/executorch-rs"
license = "Apache-2.0"
keywords = [
    "executorch",
    "pytorch",
    "machine-learning",
    "edge-device",
    "bindings",
]
categories = [
    "algorithms",
    "mathematics",
    "embedded",
    "no-std",
    "no-std::no-alloc",
]
links = "executorch"

[dependencies]
cxx = { version = "1.0", optional = true }

[build-dependencies]
bindgen = "0.71"
cc = "1.2"
cxx-build = { version = "1.0", optional = true }

[features]
default = ["std"]
std = []
data-loader = []
module = ["std"]
tensor-ptr = ["std", "cxx", "cxx-build"]

[package.metadata.docs.rs]
features = ["data-loader", "module"]
