[package]
name = "executorch-sys"
version = "0.7.0"
authors = ["Barak Ugav <barakugav@gmail.com>"]
edition = "2021"
rust-version = "1.77.0" # println!("cargo::...)
description = "Unsafe Rust bindings for ExecuTorch - On-device AI across mobile, embedded and edge for PyTorch"
readme = "README.md"
repository = "https://github.com/barakugav/executorch-rs"
license = "Apache-2.0"
keywords = [
    "executorch",
    "pytorch",
    "machine-learning",
    "edge-device",
    "bindings",
]
categories = [
    "algorithms",
    "mathematics",
    "embedded",
    "no-std",
    "no-std::no-alloc",
]
include = [
    "Cargo.toml",
    "build.rs",
    "src/",
    "cpp/",
    "third-party/",
    "README.md",
    "LICENSE",
]
links = "executorch"

[dependencies]
cxx = { version = "1.0", optional = true }
link-cplusplus = { version = "1.0", optional = true }

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
cxx-build = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["cxx", "cxx-build", "link-cplusplus"]
data-loader = []
module = ["std"]
etdump = []
tensor-ptr = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
