[package]
name = "executorch"
version = "0.7.2"
authors = ["Barak Ugav <barakugav@gmail.com>"]
edition = "2021"
rust-version = "1.77.0" # executorch-sys
description = "Rust bindings for ExecuTorch - On-device AI across mobile, embedded and edge for PyTorch"
readme = "README.md"
repository = "https://github.com/barakugav/executorch-rs"
license = "Apache-2.0"
keywords = [
    "executorch",
    "pytorch",
    "machine-learning",
    "edge-device",
    "bindings",
]
categories = [
    "algorithms",
    "mathematics",
    "embedded",
    "no-std",
    "no-std::no-alloc",
]
include = ["Cargo.toml", "build.rs", "src/", "README.md", "LICENSE"]

[dependencies]
executorch-sys = { path = "../executorch-sys", version = "0.7.2", default-features = false }
ndarray = { version = ">=0.16, <0.18", default-features = false, optional = true }
half = { version = "2.4", default-features = false, optional = true }
num-complex = { version = "0.4", default-features = false, optional = true }
cfg-if = "1.0"

[dev-dependencies]
ctor = "0.6"

[features]
default = ["std", "ndarray"]
std = ["alloc", "executorch-sys/std"]
alloc = []
ndarray = ["dep:ndarray"]
data-loader = ["executorch-sys/data-loader"]
module = ["executorch-sys/module", "std", "data-loader"]
tensor-ptr = ["executorch-sys/tensor-ptr", "std"]
etdump = ["executorch-sys/etdump"]
half = ["dep:half"]
num-complex = ["dep:num-complex"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
