[package]
publish = false
name = "example-data-map"
version = "0.0.0"
edition = "2021"

[dependencies]
executorch = { path = "../../executorch/", features = [
    "ndarray",
    "data-loader",
    "module",
    "tensor-ptr",
    "flat-tensor",
] }
ndarray = { version = "0.17.1", default-features = false }
