[package]
name = "example-llama3"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
clap = { version = "4.5", features = ["derive"] }
executorch = { path = "../../", features = [
    "ndarray",
    "data-loader",
    "module",
    "tensor-ptr",
    "half",
] }
rand = "0.9"
serde_json = "1.0"
