[package]
publish = false
name = "example-no-std"
version = "0.0.0"
edition = "2021"

[dependencies]
executorch = { path = "../../", default-features = false, features = [
    "data-loader",
    "ndarray",
] }
libc-print = "0.1.23"
cstr = "0.2.12"

# Unfortunately, no_std is still WIP, see https://github.com/pytorch/executorch/issues/4561
link-cplusplus = "1.0"


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
